--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chrome-headless-render-pdf",
+    "name": "headless-render-html-pdf",
     "version": "1.4.0",
     "main": "lib/index.js",
     "scripts": {
@@ -10,7 +10,7 @@
     "license": "ISC",
     "description": "",
     "repository": {
-        "url": "https://github.com/TuuKeZu/express-runtime.git"
+        "url": "https://github.com/TuuKeZu/headless-render-html-pdf"
     },
     "devDependencies": {
         "@swc/core": "^1.3.50",
